Adjusted css to remove layout bug with longer usernames

--- a/graphics/css/GBA_2p.css
+++ b/graphics/css/GBA_2p.css
@@ -1,17 +1,18 @@
 /* Runner and pronouns panel. */
 .runner-container, .comms-container {
-	width: 483px;
+	width: 493px;
 	height: 74px;
 	line-height: 74px;
 	
-	padding-left: 10px;
-	padding-right: 10px;
+	padding-left: 5px;
+	padding-right: 5px;
 }
 
 /* Runner name dynamic text. */
 .runner-name {
-	/* max-width: 430px; */
-	font-size: 26pt;
+	/* max-width: 270px; */
+	font-size: 20pt;
+	float: right;
 }
 
 /* Player 1 info position. */
@@ -26,9 +27,24 @@
 	top: 654px;
 }
 
+.medals {
+	margin-top: 8px;
+	margin-right: 5px;
+}
+
+.medals-img {
+	width: 25px;
+	height: 25px;
+}
+
+.finalTime {
+	font-size: 18pt;
+}
+
 /* Commentator name and pronouns panel. */
 .comms-pronouns {
-	font-size: 20pt;
+	font-size: 18pt;
+	/* text-align: right; */
 }
 
 /* Comms 1 info position. */
